Formatting pom.xml

--- a/alphabetfx-app/pom.xml
+++ b/alphabetfx-app/pom.xml
@@ -2,11 +2,11 @@
   xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-	   <parent>
-                <groupId>org.fxapps.alphabetfx</groupId>
-                <artifactId>alphabetfx-parent</artifactId>
-                <version>1.0</version>
-        </parent>
+  <parent>
+    <groupId>org.fxapps.alphabetfx</groupId>
+    <artifactId>alphabetfx-parent</artifactId>
+    <version>1.0</version>
+  </parent>
   <artifactId>alphabetfx-app</artifactId>
   <name>AlphabetFXApp</name>
   <description>MobileApp for AlphabetFX</description>
@@ -76,7 +76,7 @@
     <dependency>
       <groupId>org.fxapps</groupId>
       <artifactId>alphabetfx</artifactId>
-      <version>1.0</version>
+      <version>${project.parent.version}</version>
     </dependency>
   </dependencies>
 
